@@ -1004,6 +1004,7 @@ scid-4.3
 	* Reorder piece sets alphabetically
 	* Allow the informant value for "won game" to count up to "mate found" (= 327)
 	* Tiny font can now be set from the GUI
+	* Input engine parameters were not used properly (ID: 2969395)
 - Language updates:
 	* brazilian portugese translation (thanks ot Gilberto de Almeida Peres)
 	* nederland translation (thanks to Leander Laruelle)
